替换LOGGERX大更新