@@ -1,31 +1,34 @@
-package studio.blacktech.coolqbot.furryblack.common.Security.Cipher;
+package studio.blacktech.security.Cipher;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.security.GeneralSecurityException;
-import java.security.InvalidAlgorithmParameterException;
 import java.security.InvalidKeyException;
+import java.security.KeyFactory;
+import java.security.KeyPair;
+import java.security.KeyPairGenerator;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.security.Provider;
 import java.security.SecureRandom;
 import java.security.Security;
+import java.security.interfaces.RSAPrivateKey;
+import java.security.interfaces.RSAPublicKey;
+import java.security.spec.InvalidKeySpecException;
+import java.security.spec.PKCS8EncodedKeySpec;
+import java.security.spec.X509EncodedKeySpec;
 import java.util.Arrays;
+import java.util.Base64;
 
 import javax.crypto.BadPaddingException;
 import javax.crypto.Cipher;
 import javax.crypto.IllegalBlockSizeException;
-import javax.crypto.KeyGenerator;
 import javax.crypto.NoSuchPaddingException;
-import javax.crypto.SecretKey;
-import javax.crypto.spec.IvParameterSpec;
-import javax.crypto.spec.SecretKeySpec;
 
 import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
-/***
- * 使用标准JavaCipher包装的AES-128 CBC分组模式工具类，
+/**
+ * 使用标准JavaCipher包装的RSA工具类，
  *
  * 包含三种加密模式：标准加密、使用HA-384进行消息验证、使用签名后不初始化的SHA-384进行消息验证。
  *
@@ -39,19 +42,19 @@ import sun.misc.BASE64Encoder;
  *
  * 之后为原始数据getBytes(UTF-8)
  *
- * 数据帧经过AES加密和Base64编码，成为密文。
+ * 数据帧经过RSA加密和Base64编码，成为密文。
  *
  * @author Alceatraz Warprays
  *
  */
-public class AESCipher {
+public class RSACipher {
 
-	private SecretKeySpec sk;
-	private IvParameterSpec iv;
 	private Cipher encrypter;
 	private Cipher decrypter;
-	private BASE64Encoder encoder;
-	private BASE64Decoder decoder;
+	private Base64.Encoder encoder;
+	private Base64.Decoder decoder;
+	private RSAPublicKey publicKey;
+	private RSAPrivateKey privateKey;
 	private MessageDigest staticDigester;
 	private MessageDigest oneoffDigester;
 
@@ -65,122 +68,150 @@ public class AESCipher {
 	 * 构造方法
 	 *
 	 * @param secretKey 随机种子，作为密钥生成器的随机数生成器的种子
+	 * @param keyLength 密钥长度，至少为512
+	 * @throws InvalidKeyException 错误的密钥
 	 */
-	@Deprecated
-	public AESCipher(String secretKey) {
-		this(generateSecretKeySpec(secretKey), generateIvParameterSpec("0123456789ABCDEF"));
-		System.err.println("Warning! Using fix IV is RISK! Only test purpose!");
+	public RSACipher(String secretKey, int keyLength) throws InvalidKeyException {
+		this(RSACipher.generateKeyPair(secretKey, keyLength));
 	}
 
 	/**
 	 * 构造方法
 	 *
-	 * @param secretKeySpec 密钥
+	 * @param keyPair 密钥对
 	 */
-	@Deprecated
-	public AESCipher(SecretKeySpec secretKeySpec) {
-		this(secretKeySpec, generateIvParameterSpec("0123456789ABCDEF"));
-		System.err.println("Warning! Using fix IV is RISK! Only test purpose!");
+	public RSACipher(KeyPair keyPair) {
+		this((RSAPublicKey) keyPair.getPublic(), (RSAPrivateKey) keyPair.getPrivate());
 	}
 
 	/**
 	 * 构造方法
 	 *
-	 * @param secretKey     随机种子，作为密钥生成器的随机数生成器的种子
-	 * @param initialVector 初始向量种子，MD5后用于生成初始向量
+	 * @param publicKey Base64编码的X509格式公钥
+	 * @throws InvalidPublicKeyException 公钥格式错误
 	 */
-	public AESCipher(String secretKey, String initialVector) {
-		this(generateSecretKeySpec(secretKey), generateIvParameterSpec(initialVector));
+	public RSACipher(String publicKey) throws InvalidPublicKeyException {
+		this(RSACipher.getRSAPublicKeyFromString(publicKey));
 	}
 
 	/**
 	 * 构造方法
 	 *
-	 * @param secretKeySpec 密钥
-	 * @param initialVector 初始向量种子，MD5后用于生成初始向量
+	 * @param publicKey  Base64编码的X509格式公钥
+	 * @param privateKey Base64编码的PKCS8格式私钥
+	 * @throws InvalidPublicKeyException  公钥格式错误
+	 * @throws InvalidPrivateKeyException 私钥格式错误
 	 */
-	public AESCipher(SecretKeySpec secretKeySpec, String initialVector) {
-		this(secretKeySpec, generateIvParameterSpec(initialVector));
+	public RSACipher(String publicKey, String privateKey) throws InvalidPublicKeyException, InvalidPrivateKeyException {
+		this(RSACipher.getRSAPublicKeyFromString(publicKey), RSACipher.getRSAPrivateKeyFromString(privateKey));
 	}
 
 	/**
 	 * 构造方法
 	 *
-	 * @param secretKey     随机种子，作为密钥生成器的随机数生成器的种子
-	 * @param initialVector 初始向量
+	 * @param publicKey RSA公钥
 	 */
-	public AESCipher(String secretKey, IvParameterSpec initialVector) {
-		this(generateSecretKeySpec(secretKey), initialVector);
-	}
-
-	/**
-	 * 构造方法
-	 *
-	 * @param secretKeySpec 密钥
-	 * @param initialVector 初始向量
-	 */
-	public AESCipher(SecretKeySpec secretKeySpec, IvParameterSpec initialVector) {
+	public RSACipher(RSAPublicKey publicKey) {
 
 		try {
 
-			this.sk = secretKeySpec;
-			this.iv = initialVector;
+			this.publicKey = publicKey;
 
-			this.encrypter = Cipher.getInstance("AES/CBC/PKCS5Padding");
-			this.decrypter = Cipher.getInstance("AES/CBC/PKCS5Padding");
+			encrypter = Cipher.getInstance("RSA");
 
-			this.encrypter.init(Cipher.ENCRYPT_MODE, this.sk, this.iv);
-			this.decrypter.init(Cipher.DECRYPT_MODE, this.sk, this.iv);
+			encrypter.init(Cipher.ENCRYPT_MODE, this.publicKey);
 
-			this.encoder = new BASE64Encoder();
-			this.decoder = new BASE64Decoder();
+			encoder = Base64.getEncoder();
 
-			this.staticDigester = MessageDigest.getInstance("SHA-384");
-			this.oneoffDigester = MessageDigest.getInstance("SHA-384");
+			staticDigester = MessageDigest.getInstance("SHA-384");
+			oneoffDigester = MessageDigest.getInstance("SHA-384");
 
-		} catch (NoSuchAlgorithmException | NoSuchPaddingException | InvalidKeyException | InvalidAlgorithmParameterException exception) {
-			exception.printStackTrace();
+		} catch (InvalidKeyException | NoSuchAlgorithmException | NoSuchPaddingException exception) {
+			// 这些异常不可能发生 - 使用ADoptOpenJDK 8
+			// InvalidKeyException ---------------- 由密钥生成器生成，输入密钥错误已经在上一级构造方法抛出
+			// NoSuchPaddingException ------------- 不允许用户自定义算法
+			// NoSuchAlgorithmException ----------- 不允许用户自定义算法
+		}
+	}
+
+	/**
+	 * 构造方法
+	 *
+	 * @param publicKey  RSA公钥
+	 * @param privateKey RSA私钥
+	 */
+	public RSACipher(RSAPublicKey publicKey, RSAPrivateKey privateKey) {
+
+		try {
+
+			this.publicKey = publicKey;
+			this.privateKey = privateKey;
+
+			encrypter = Cipher.getInstance("RSA");
+			decrypter = Cipher.getInstance("RSA");
+
+			encrypter.init(Cipher.ENCRYPT_MODE, this.publicKey);
+			decrypter.init(Cipher.DECRYPT_MODE, this.privateKey);
+
+			encoder = Base64.getEncoder();
+			decoder = Base64.getDecoder();
+
+			staticDigester = MessageDigest.getInstance("SHA-384");
+			oneoffDigester = MessageDigest.getInstance("SHA-384");
+
+		} catch (InvalidKeyException | NoSuchAlgorithmException | NoSuchPaddingException exception) {
+			// 这些异常不可能发生 - 使用ADoptOpenJDK 8
+			// InvalidKeyException ---------------- 由密钥生成器生成，输入密钥错误已经在上一级构造方法抛出
+			// NoSuchPaddingException ------------- 不允许用户自定义算法
+			// NoSuchAlgorithmException ----------- 不允许用户自定义算法
+		}
+	}
+
+	private static RSAPublicKey getRSAPublicKeyFromString(String publicKey) throws InvalidPublicKeyException {
+		try {
+			KeyFactory factory = KeyFactory.getInstance("RSA");
+			byte[] publicKeyString = new BASE64Decoder().decodeBuffer(publicKey);
+			return (RSAPublicKey) factory.generatePublic(new X509EncodedKeySpec(publicKeyString));
+		} catch (IOException | InvalidKeySpecException exception) {
+			throw new InvalidPublicKeyException("Invalidate publickey, make sure is formated as X509 and encode with BASE64.");
+		} catch (NoSuchAlgorithmException exception) {
+			return null;
 			// 这些异常不可能发生 - 使用ADoptOpenJDK 8
 			// NoSuchAlgorithmException ----------- 不允许用户自定义算法
-			// NoSuchPaddingException ------------- 不允许用户自定义算法
-			// InvalidKeyException ---------------- 密钥由生成器生成
-			// InvalidAlgorithmParameterException - 不允许用户自定义算法
 		}
 	}
 
-	/**
-	 * 生成密钥
-	 *
-	 * @param secretKey 密钥种子，作为密钥生成器的随机数生成器的种子
-	 * @return 密钥
-	 */
-	private static SecretKeySpec generateSecretKeySpec(String secretKey) {
+	private static RSAPrivateKey getRSAPrivateKeyFromString(String privateKey) throws InvalidPrivateKeyException {
 		try {
+			KeyFactory factory = KeyFactory.getInstance("RSA");
+			byte[] privateKeyString = new BASE64Decoder().decodeBuffer(privateKey);
+			return (RSAPrivateKey) factory.generatePrivate(new PKCS8EncodedKeySpec(privateKeyString));
+		} catch (IOException | InvalidKeySpecException exception) {
+			throw new InvalidPrivateKeyException("Invalidate publickey, make sure is formated as X509 and encode with BASE64.");
+		} catch (NoSuchAlgorithmException exception) {
+			return null;
+			// 这些异常不可能发生 - 使用ADoptOpenJDK 8
+			// NoSuchAlgorithmException ----------- 不允许用户自定义算法
+		}
+
+	}
+
+	private static KeyPair generateKeyPair(String randomSeed, int keyLength) {
+		try {
+
 			Provider provider = Security.getProvider("SUN");
 			SecureRandom random = SecureRandom.getInstance("SHA1PRNG", provider);
-			random.setSeed(secretKey.getBytes(StandardCharsets.UTF_8));
-			KeyGenerator generator = KeyGenerator.getInstance("AES");
-			generator.init(128, random);
-			SecretKey skey = generator.generateKey();
-			return new SecretKeySpec(skey.getEncoded(), "AES");
-		} catch (NoSuchAlgorithmException exception) {
-			return null;
-		}
-	}
+			random.setSeed(randomSeed.getBytes(StandardCharsets.UTF_8));
 
-	/**
-	 * 生成初始向量
-	 *
-	 * @param initialVector 初始向量种子，MD5后用于生成初始向量
-	 * @return 初始向量
-	 */
-	private static IvParameterSpec generateIvParameterSpec(String initialVector) {
-		try {
-			MessageDigest digest = MessageDigest.getInstance("MD5");
-			digest.update(initialVector.getBytes(StandardCharsets.UTF_8));
-			return new IvParameterSpec(digest.digest());
+			KeyPairGenerator generator = KeyPairGenerator.getInstance("RSA");
+			generator.initialize(keyLength, random);
+
+			return generator.generateKeyPair();
+
 		} catch (NoSuchAlgorithmException exception) {
 			return null;
+			// 这些异常不可能发生 - 使用ADoptOpenJDK 8
+			// NoSuchAlgorithmException ----------- 不允许用户自定义算法
 		}
 	}
 
@@ -201,8 +232,9 @@ public class AESCipher {
 		try {
 
 			byte[] tmp1 = content.getBytes(StandardCharsets.UTF_8);
-			byte[] tmp2 = this.encrypter.doFinal(tmp1);
-			return this.encoder.encode(tmp2);
+			byte[] tmp2 = encrypter.doFinal(tmp1);
+			byte[] tmp3 = encoder.encode(tmp2);
+			return new String(tmp3, StandardCharsets.UTF_8);
 
 		} catch (IllegalBlockSizeException | BadPaddingException exception) {
 			exception.printStackTrace();
@@ -220,17 +252,13 @@ public class AESCipher {
 	 * @return 原文
 	 * @throws IOException 输入错误的内容
 	 */
-	public String decrypt(String content) throws IOException {
+	public String decrypt(String content) {
 
 		try {
 
-			byte[] tmp1 = this.decoder.decodeBuffer(content);
-			byte[] tmp2 = this.decrypter.doFinal(tmp1);
+			byte[] tmp1 = decoder.decode(content);
+			byte[] tmp2 = decrypter.doFinal(tmp1);
 			return new String(tmp2, StandardCharsets.UTF_8);
-
-		} catch (IOException exception) {
-			exception.printStackTrace();
-			throw exception;
 
 		} catch (IllegalBlockSizeException | BadPaddingException exception) {
 			exception.printStackTrace();
@@ -263,13 +291,15 @@ public class AESCipher {
 			int sizePartLength = sizePart.length;
 			System.arraycopy(sizePart, 0, result, 8 - sizePartLength, sizePartLength);
 
-			this.oneoffDigester.update(rawMessage);
-			hashPart = this.oneoffDigester.digest();
+			oneoffDigester.update(rawMessage);
+			hashPart = oneoffDigester.digest();
 			System.arraycopy(hashPart, 0, result, 8, 8);
 
 			System.arraycopy(rawMessage, 0, result, 16, rawMessageLength);
 
-			return this.encoder.encode(this.encrypter.doFinal(result));
+			byte[] tmp1 = encrypter.doFinal(result);
+			byte[] tmp2 = encoder.encode(tmp1);
+			return new String(tmp2, StandardCharsets.UTF_8);
 
 		} catch (IllegalBlockSizeException | BadPaddingException exception) {
 			return null;
@@ -292,7 +322,7 @@ public class AESCipher {
 
 		try {
 
-			byte[] rawMessage = this.decrypter.doFinal(this.decoder.decodeBuffer(content));
+			byte[] rawMessage = decrypter.doFinal(decoder.decode(content));
 
 			byte[] sizePart = new byte[8];
 			byte[] hashPart = new byte[8];
@@ -307,10 +337,10 @@ public class AESCipher {
 
 			byte[] mesgPart = new byte[claminMessagelength];
 			System.arraycopy(rawMessage, 16, mesgPart, 0, claminMessagelength);
-			this.oneoffDigester.update(mesgPart);
-			byte[] digest = this.oneoffDigester.digest();
+			oneoffDigester.update(mesgPart);
+			byte[] digest = oneoffDigester.digest();
 
-			if (!isSame(hashPart, digest)) { throw new MessageHashCheckFailedException(hashPart, digest); }
+			if (!RSACipher.isSame(hashPart, digest)) { throw new MessageHashCheckFailedException(hashPart, digest); }
 
 			return new String(mesgPart, StandardCharsets.UTF_8);
 
@@ -338,13 +368,15 @@ public class AESCipher {
 			int sizePartLength = sizePart.length;
 			System.arraycopy(sizePart, 0, result, 8 - sizePartLength, sizePartLength);
 
-			this.staticDigester.update(rawMessage);
-			hashPart = ((MessageDigest) this.staticDigester.clone()).digest();
+			staticDigester.update(rawMessage);
+			hashPart = ((MessageDigest) staticDigester.clone()).digest();
 			System.arraycopy(hashPart, 0, result, 8, 8);
 
 			System.arraycopy(rawMessage, 0, result, 16, rawMessageLength);
 
-			return this.encoder.encode(this.encrypter.doFinal(result));
+			byte[] tmp1 = encrypter.doFinal(result);
+			byte[] tmp2 = encoder.encode(tmp1);
+			return new String(tmp2, StandardCharsets.UTF_8);
 
 		} catch (IllegalBlockSizeException | BadPaddingException | CloneNotSupportedException exception) {
 			return null;
@@ -358,7 +390,7 @@ public class AESCipher {
 	public String decryptPhaseHash(String content) throws IOException, MessageSizeCheckFailedException, MessageHashCheckFailedException {
 		try {
 
-			byte[] rawMessage = this.decrypter.doFinal(this.decoder.decodeBuffer(content));
+			byte[] rawMessage = decrypter.doFinal(decoder.decode(content));
 
 			byte[] sizePart = new byte[8];
 			byte[] hashPart = new byte[8];
@@ -374,16 +406,12 @@ public class AESCipher {
 			byte[] mesgPart = new byte[claminMessagelength];
 			System.arraycopy(rawMessage, 16, mesgPart, 0, claminMessagelength);
 
-			this.staticDigester.update(mesgPart);
-			byte[] digest = ((MessageDigest) this.staticDigester.clone()).digest();
+			staticDigester.update(mesgPart);
+			byte[] digest = ((MessageDigest) staticDigester.clone()).digest();
 
-			if (!isSame(hashPart, digest)) { throw new MessageHashCheckFailedException(hashPart, digest); }
+			if (!RSACipher.isSame(hashPart, digest)) { throw new MessageHashCheckFailedException(hashPart, digest); }
 
 			return new String(mesgPart, StandardCharsets.UTF_8);
-
-		} catch (IOException exception) {
-			exception.printStackTrace();
-			throw exception;
 
 		} catch (IllegalBlockSizeException | BadPaddingException | CloneNotSupportedException exception) {
 			return null;
@@ -408,6 +436,20 @@ public class AESCipher {
 	//
 	// ==========================================================================================================================================================
 
+	public String getEncodedPublicKey() {
+		return new String(encoder.encode(publicKey.getEncoded()), StandardCharsets.UTF_8);
+	}
+
+	public String getEncodedPrivateKey() {
+		return new String(encoder.encode(privateKey.getEncoded()), StandardCharsets.UTF_8);
+	}
+
+	// ==========================================================================================================================================================
+	//
+	//
+	//
+	// ==========================================================================================================================================================
+
 	public static class MessageSizeCheckFailedException extends GeneralSecurityException {
 		private static final long serialVersionUID = 0;
 
@@ -424,4 +466,19 @@ public class AESCipher {
 		}
 	}
 
+	public static class InvalidPublicKeyException extends InvalidKeyException {
+		private static final long serialVersionUID = 0;
+
+		public InvalidPublicKeyException(String message) {
+			super(message);
+		}
+	}
+
+	public static class InvalidPrivateKeyException extends InvalidKeyException {
+		private static final long serialVersionUID = 0;
+
+		public InvalidPrivateKeyException(String message) {
+			super(message);
+		}
+	}
 }
